--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ authors = [
 ]
 requires-python = ">= 3.12"
 dependencies = [
+  "azure-servicebus>=7.14.3",
   "Django (>=6.0,<7)",
+  "pydantic>=2.12.5",
 ]
 description = "AMQP support for django. Supporting RabbitMQ and Azure ServiceBus."
 license = "BSD-3-Clause"
