--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "pydantic>=2.12.5",
 ]
 description = "AMQP support for django. Supporting RabbitMQ and Azure ServiceBus."
+readme = "README.md"
 license = "BSD-3-Clause"
 license-files = ["LICENSE"]
 classifiers = [
